--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/leaflet": "^1.9.16",
 		"autoprefixer": "^10.4.20",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -26,6 +27,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"firebase": "^11.1.0",
-		"firebase-admin": "^13.0.2"
+		"firebase-admin": "^13.0.2",
+		"leaflet": "^1.9.4"
 	}
 }
