--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"deploy": "npm run build && firebase deploy",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/leaflet": "^1.9.16",
 		"autoprefixer": "^10.4.20",
 		"svelte": "^5.0.0",
+		"svelte-adapter-firebase": "^0.15.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
@@ -28,6 +31,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"firebase": "^11.1.0",
 		"firebase-admin": "^13.0.2",
+		"firebase-tools": "^13.29.1",
 		"leaflet": "^1.9.4"
 	}
 }
