Update cookie package

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 	  "@tailwindcss/typography": "^0.5.15",          
 	  "firebase": "^11.1.0",                    
 	  "firebase-admin": "^13.0.2",                 
-	  "leaflet": "^1.9.4"                             
+	  "leaflet": "^1.9.4",
+	  "cookie": ">=0.7.0"         
 	}
   }
   
