--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
 	  "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 	  "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
-	"devDependencies": {
-	  "@sveltejs/adapter-node": "^5.2.11",       
-	  "@sveltejs/kit": "^2.15.1",                  
-	  "@sveltejs/vite-plugin-svelte": "^4.0.0",  
-	  "@types/leaflet": "^1.9.16",               
-	  "autoprefixer": "^10.4.20",           
-	  "svelte": "^3.59.0",              
-	  "svelte-check": "^4.0.0",                    
-	  "tailwindcss": "^3.4.9",                  
-	  "typescript": "^5.0.0",                     
-	  "vite": "^4.0.0"                            
-	},
-	"dependencies": {
-	  "@tailwindcss/forms": "^0.5.9",                
-	  "@tailwindcss/typography": "^0.5.15",          
-	  "firebase": "^11.1.0",                    
-	  "firebase-admin": "^13.0.2",                 
-	  "leaflet": "^1.9.4",
-	  "cookie": ">=0.7.0"         
-	}
+  "devDependencies": {
+    "svelte": "^5.0.0",
+    "@sveltejs/kit": "^2.15.2",
+    "@sveltejs/adapter-node": "^5.2.11",
+    "@sveltejs/vite-plugin-svelte": "^4.0.4",
+    "vite": "^5.0.0",
+    "typescript": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "tailwindcss": "^3.4.9",
+    "@types/leaflet": "^1.9.16",
+    "autoprefixer": "^10.4.20"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "cookie": ">=0.7.0",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
+    "leaflet": "^1.9.4"
   }
+}
   
