--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "bluechipcollision",
+	"name": "test",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -8,26 +8,27 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^5.2.11",
-		"@sveltejs/kit": "^2.15.2",
-		"@sveltejs/vite-plugin-svelte": "^4.0.4",
-		"@types/leaflet": "^1.9.16",
+		"@sveltejs/adapter-node": "^5.2.9",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.0"
+		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"cookie": ">=0.7.0",
-		"firebase": "^11.1.0",
-		"firebase-admin": "^13.0.2",
-		"leaflet": "^1.9.4"
+		"@tailwindcss/typography": "^0.5.15"
 	}
 }
