--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,15 +9,8 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-	},
-	"include": [
-		"src/**/*.d.ts",
-		"src/**/*.js",
-		"src/**/*.ts",
-		"src/**/*.svelte",
-		".svelte-kit/ambient.d.ts",
-		".svelte-kit/types/**/$types.d.ts"
-	]
+		"moduleResolution": "bundler"
+	}
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
 	//
