--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"firebase": "^11.1.0",
-		"leaflet": "^1.9.4"
+		"googleapis": "^144.0.0",
+		"leaflet": "^1.9.4",
+		"svelte-hamburgers": "^5.0.0"
 	}
 }
