--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/leaflet": "^1.9.16",
+		"@types/nodemailer": "^6.4.17",
 		"autoprefixer": "^10.4.20",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
@@ -31,6 +32,8 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"dotenv": "^16.4.7",
+		"emailjs-com": "^3.2.0",
 		"firebase": "^11.1.0",
 		"googleapis": "^144.0.0",
 		"leaflet": "^1.9.4",
