--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"date-fns-tz": "^3.2.0",
 		"dotenv": "^16.4.7",
 		"emailjs-com": "^3.2.0",
 		"firebase": "^11.1.0",
