--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/formidable": "^3.4.5",
 		"@types/leaflet": "^1.9.16",
 		"@types/nodemailer": "^6.4.17",
 		"autoprefixer": "^10.4.20",
@@ -29,6 +30,7 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.48.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
