--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/formidable": "^3.4.5",
+		"@types/jsonwebtoken": "^9.0.8",
 		"@types/leaflet": "^1.9.16",
 		"@types/nodemailer": "^6.4.17",
 		"autoprefixer": "^10.4.20",
@@ -39,6 +40,7 @@
 		"emailjs-com": "^3.2.0",
 		"firebase": "^11.1.0",
 		"googleapis": "^144.0.0",
+		"jsonwebtoken": "^9.0.2",
 		"svelte-hamburgers": "^5.0.0"
 	}
 }
