--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"cookie": "^0.7.0",
 		"date-fns-tz": "^3.2.0",
 		"dotenv": "^16.4.7",
 		"emailjs-com": "^3.2.0",
