--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^5.2.9",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.17.1",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/formidable": "^3.4.5",
 		"@types/jsonwebtoken": "^9.0.8",
 		"@types/leaflet": "^1.9.16",
 		"@types/nodemailer": "^6.4.17",
 		"autoprefixer": "^10.4.20",
+		"npm-force-resolutions": "^0.0.10",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
@@ -43,5 +44,8 @@
 		"googleapis": "^144.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"svelte-hamburgers": "^5.0.0"
+	},
+	"overrides": {
+		"cookie": "^0.7.0"
 	}
 }
