--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"vite": "^5.4.12"
 	},
 	"dependencies": {
+		"@mac-barrett/svelte-recaptcha": "^1.2.1",
 		"@supabase/supabase-js": "^2.48.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
