--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
 		"firebase": "^11.1.0",
 		"googleapis": "^144.0.0",
 		"jsonwebtoken": "^9.0.2",
-		"svelte-hamburgers": "^5.0.0"
+		"svelte-hamburgers": "^5.0.0",
+		"svelte-sonner": "^0.3.28"
 	},
 	"overrides": {
 		"cookie": "^0.7.0"
