--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
 		"googleapis": "^144.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"svelte-hamburgers": "^5.0.0",
-		"svelte-sonner": "^0.3.28"
+		"svelte-sonner": "^0.3.28",
+		"swiper": "^11.2.5"
 	},
 	"overrides": {
 		"cookie": "^0.7.0"
