--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"dotenv": "^16.4.7",
 		"emailjs-com": "^3.2.0",
 		"firebase": "^11.1.0",
+		"firebase-admin": "^13.2.0",
 		"googleapis": "^144.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"svelte-hamburgers": "^5.0.0",
