--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^5.2.9",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/adapter-vercel": "^5.6.3",
-		"@sveltejs/kit": "^2.17.1",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/kit": "^2.20.2",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/formidable": "^3.4.5",
 		"@types/jsonwebtoken": "^9.0.8",
 		"@types/leaflet": "^1.9.16",
@@ -28,9 +29,10 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-loading-spinners": "^0.3.6",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
-		"vite": "^5.4.12"
+		"vite": "^6.2.3"
 	},
 	"dependencies": {
 		"@mac-barrett/svelte-recaptcha": "^1.2.1",
