--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"@vercel/analytics": "^1.5.0",
 		"cookie": "^0.7.0",
 		"date-fns-tz": "^3.2.0",
 		"dotenv": "^16.4.7",
